--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.2",
   "description": "React Markdown Editor",
   "main": "lib/MDEditor.js",
+  "directories": {
+    "lib": "./lib"
+  },
   "author": "Jed Watson",
   "homepage": "https://github.com/JedWatson/react-md-editor",
   "license": "MIT",
@@ -15,19 +18,15 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "codemirror": "^5.18.2"
-  },
-  "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "codemirror": "^5.18.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "happiness": "^7.1.2",
     "marked": "^0.3.6",
-    "react": "^15.0",
-    "react-component-gulp-tasks": "^0.7.7",
-    "react-dom": "^15.0"
+    "react-component-gulp-tasks": "^0.7.7"
   },
   "browserify-shim": {
     "react": "global:React"
